# Kuboki_Jazzy_RaspberryPi5

./: .gitignore  README.md  frames_2026-01-13_13.49.29.gv
src/applications/kobuki/: README.md
src/applications/kobuki/cmd_vel_mux/: README.md
src/applications/kobuki/docker/: Dockerfile  compose-build.yaml  compose.yaml  workspace_entrypoint.sh
src/applications/kobuki/kobuki/: CMakeLists.txt  package.xml
src/applications/kobuki/kobuki_core/: CMakeLists.txt  README.md
src/applications/kobuki/kobuki_ros/: README.md
src/applications/kobuki/kobuki_ros/kobuki_gazebo/: CMakeLists.txt  package.xml
src/applications/kobuki/kobuki_ros/kobuki_gazebo/launch/: empty_world.launch.py  spawn_model.launch.py
src/applications/kobuki/kobuki_velocity_smoother/: CMakeLists.txt  README.md
src/applications/kobuki_dependencies/: README.md
src/applications/kobuki_dependencies/sophus/: CMakeLists.txt
src/applications/kobuki_nav/: CMakeLists.txt  package.xml
src/applications/kobuki_nav/config/: clean_params.yaml  nav2_params.yaml  nomap_nav2_params.yaml  slam_toolbox.yaml
src/applications/kobuki_nav/launch/: kobuki_slam.launch.py  nomap_nav2.launch.py  slam_nav2.launch.py  slam_only_min.launch.py
src/devices/realsense_d435i_ros2/: package.xml  setup.cfg  setup.py
src/devices/realsense_d435i_ros2/config/: conf_realsense.yaml  conf_realsense_640x480x15.yaml
src/planner/waypoint_nav/: package.xml  setup.cfg  setup.py
src/tasks/: package.xml  setup.cfg  setup.py
src/tasks/launch/: bringup.launch.py  nav2_waypoint.launch.py
(+45 files in other folders)
